--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
+:root {
+  --body-bg-color: #ffffff;
+  --primary-color: black;
+  --theme-color: rgb(51, 50, 121);
+  --bg-color1: rgb(167, 224, 214);
+  --bg-color2: rgb(64, 168, 187);
+  --bg-color3: rgb(61, 86, 139);
+  --nav-color: rgba(225, 222, 222, 0.1);
+  --toggle-color: rgb(46, 45, 45);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background: linear-gradient(
+    to top right,
+    var(--bg-color1),
+    var(--bg-color2),
+    var(--bg-color3)
+  );
+  color: var(--primary-color);
   min-height: 100vh;
+}
+
+nav {
+  background-color: var(--nav-color);
+  font-size: 20px;
+  padding: 0 20px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  font-weight: bold;
+  color: var(--primary-color);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  box-shadow: 0px 0px 12px 0.5px var(--primary-color);
+}
+
+nav div {
+  display: flex;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  gap: 10px;
+}
+
+nav ul li {
+  list-style: none;
+  font-size: 18px;
+  font-weight: 400;
+  color: var(--primary-color);
+}
+
+/* Dark Mode Variables */
+body.dark-mode {
+  --body-bg-color: black;
+  --primary-color: white;
+  --theme-color: rgb(181, 243, 238);
+  --bg-color1: rgb(140, 145, 144);
+  --bg-color2: rgb(53, 63, 64);
+  --bg-color3: rgb(2, 9, 25);
+  --nav-color: rgba(24, 60, 82, 0.203);
+  --toggle-color: yellow;
+}
+
+nav button {
+  background-color: transparent;
+  border: none;
+}
+
+svg {
+  fill: var(--toggle-color);
+}
+.container {
+  min-height: 400px;
+  padding: 40px;
+}
+.container textarea {
+  width: 90%;
+  min-height: 250px;
+  resize: none;
+  padding: 20px;
+  border-radius: 10px;
+  outline: none;
+  background: rgba(255, 255, 255, 0.303);
+  color: var(--primary-color);
+  font-size: 18px;
+}
+
+.buttons {
+  display: flex;
+  gap: 20px;
+}
+
+.buttons button,
+.button {
+  font-size: 20px;
+  padding: 5px 10px;
+  background-color: rgb(95, 175, 236);
   color: white;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.footer {
+  width: 100%;
+  background-color: var(--nav-color);
+  box-shadow: 2px 2px 6px 2px var(--primary-color);
+  text-align: center;
+  padding: 10px 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer a {
+  color: var(--primary-color);
+  font-weight: bold;
+  text-decoration: none;
 }
